--- a/amplify/backend/function/rdslambda2/src/package.json
+++ b/amplify/backend/function/rdslambda2/src/package.json
@@ -8,6 +8,7 @@
     "@types/aws-lambda": "^8.10.92"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.181.0",
     "pg": "^8.8.0"
   }
 }
