--- a/amplify/backend/function/rdslambda2/src/package.json
+++ b/amplify/backend/function/rdslambda2/src/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.181.0",
+    "aws-jwt-verify": "^3.1.0",
     "pg": "^8.8.0"
   }
 }
