--- a/amplify/backend/function/rdslambda2/src/package.json
+++ b/amplify/backend/function/rdslambda2/src/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.181.0",
     "aws-jwt-verify": "^3.1.0",
+    "lambda-multipart-parser": "^1.0.1",
     "pg": "^8.8.0"
   }
 }
